# sink_ships

./: README-Spiel.md  README.md  Read-Me.md
include/: Schiffe.hpp
p2_mwe Kopie/: CMakeLists.txt  Readme.md
p2_mwe Kopie/examples/: SchiffeTest.cpp  versenken_pybind.cpp
p2_mwe Kopie/extra/: Client.py  Server.py
p2_mwe Kopie/include/: Lobby.hpp  Schiffe.hpp  Spiel.hpp  Spielbrett.hpp  Spieler.hpp
p2_mwe Kopie/src/: Lobby.cpp  Schiffe.cpp  Spiel.cpp  Spielbrett.cpp  Spieler.cpp
